@@ -58,7 +58,7 @@
 #MB_loading {
 	padding: 1.5em;
 	text-indent: -10000px;
-	background: transparent url(spinner.gif) 50% 0 no-repeat;
+	background: transparent url(/data/images/spinner.gif) 50% 0 no-repeat;
 }
 
 /* Color scheme */
