@@ -10,6 +10,7 @@
 	+ Comment out some debug
 	+ Bugfix. Create redirection URLs using client headers and guessing checking
 	  the protocol (HTTP or HTTPS)
+	+ Add spinner gif to modalbox window
 0.11.102
 	+ Added `override_user_modification` configuration parameter to
 	avoid user modification checkings and override them without asking
